notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
  namespace: cdap
spec:
  selector:
    matchLabels:
      app: notification
  replicas: 1
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: npsan0330/notification:v2
