orderAPI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderapi-deployment
  namespace: cdap
spec:
  selector:
    matchLabels:
      app: orderapi
  replicas: 1
  template:
    metadata:
      labels:
        app: orderapi
    spec:
      containers:
      - name: orderapi
        image: npsan0330/orderapi:v3
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: orderapi-service
  namespace: cdap
spec:
  selector:
    app: orderapi
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
