productSite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsite-deployment
spec:
  selector:
    matchLabels:
      app: productsite
  replicas: 1
  template:
    metadata:
      labels:
        app: productsite
    spec:
      containers:
      - name: productsite
        image: npsan0330/productsite:v8
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: productsite-service
spec:
  type: NodePort
  selector:
    app: productsite
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30100
