ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productsite-ingress
  namespace: cdap
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: tech-products.com
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: orderapi-service
                port:
                  number: 5001
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: productsite-service
                port:
                  number: 5000
